5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1593_588.log
== TEST (2019-03-28 10:16:59) 
-- CODE:
saque=int(input());
#qunatidade de notas de 100
quantidade1=saque//100;

#quantidade de notas de 50
quantidade2=saque%100;
quantidade3=quantidade2//50;

#quantidade de notas de 10
quantidade4=saque%50;
quantidade5=quantidade//10;

print(quantidade1)
print(quantidade3)
print(quantidade5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    quantidade5=quantidade//10;
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:17:17) 
-- CODE:
saque=int(input());
#qunatidade de notas de 100
quantidade1=saque//100;

#quantidade de notas de 50
quantidade2=saque%100;
quantidade3=quantidade2//50;

#quantidade de notas de 10
quantidade4=saque%50;
quantidade5=quantidade4//10;

print(quantidade1)
print(quantidade3)
print(quantidade5)
-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:17:25) 
-- CODE:
saque=int(input());
#qunatidade de notas de 100
quantidade1=saque//100;

#quantidade de notas de 50
quantidade2=saque%100;
quantidade3=quantidade2//50;

#quantidade de notas de 10
quantidade4=saque%50;
quantidade5=quantidade4//10;

print(quantidade1)
print(quantidade3)
print(quantidade5)
-- EXECUTION TIME:
0.136462
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
